; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_uhci.c_uhci_rem_loop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_uhci.c_uhci_rem_loop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, %struct.uhci_qh* }
%struct.uhci_qh = type { i32, i32 }

@.str = private unnamed_addr constant [8 x i8] c"remove\0A\00", align 1
@UHCI_PTR_T = common dso_local global i32 0, align 4
@uhcinoloop = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @uhci_rem_loop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uhci_rem_loop(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.uhci_qh*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = add nsw i64 %6, -1
  store i64 %7, i64* %5, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %22

9:                                                ; preds = %1
  %10 = call i32 @DPRINTFN(i32 6, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load %struct.uhci_qh*, %struct.uhci_qh** %12, align 8
  store %struct.uhci_qh* %13, %struct.uhci_qh** %3, align 8
  %14 = load i32, i32* @UHCI_PTR_T, align 4
  %15 = call i32 @htole32(i32 %14)
  %16 = load %struct.uhci_qh*, %struct.uhci_qh** %3, align 8
  %17 = getelementptr inbounds %struct.uhci_qh, %struct.uhci_qh* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  %18 = load %struct.uhci_qh*, %struct.uhci_qh** %3, align 8
  %19 = getelementptr inbounds %struct.uhci_qh, %struct.uhci_qh* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @usb_pc_cpu_flush(i32 %20)
  br label %22

22:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @DPRINTFN(i32, i8*) #1

declare dso_local i32 @htole32(i32) #1

declare dso_local i32 @usb_pc_cpu_flush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
